Steam on Mac releasing and deployment description